--- a/vue-app/src/main.css
+++ b/vue-app/src/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     font-weight: 500;
+    font-size: 14px;
 }
 
 
@@ -41,12 +42,8 @@ hr {
 main {
     margin-left: 20px;
     margin-right: 20px;
-
-}
-
-.menuBar {
-    margin-left: 20px;
-    margin-right: 20px;
+    position: relative;
+    z-index: 0;
 }
 
 .menuBar ul {
@@ -75,6 +72,10 @@ li a:hover {
     color:#005981;
 }
 
+.selected {
+    color:#005981;
+}
+
 #menuBarLine {
     margin-top: -14px;
     margin-bottom: 0px;
@@ -86,6 +87,13 @@ li a:hover {
 }
 
 #month {
+    display: inline-block;
+    margin-left: 20px;
+    font-weight: bolder;
+    color: gray;
+}
+
+#articleText {
     display: inline-block;
     margin-left: 20px;
     font-weight: bolder;
@@ -132,12 +140,17 @@ td {
     padding: 4px 8px;
 }
 
-li a i {
-    margin-right: 4px;
+tr .blue {
+    color: #99D3ED;
 }
 
-select {
-    padding: 6px;
+tr:hover {
+    background-color:rgb(243, 243, 243);
+    cursor:pointer;
+}
+
+li a i {
+    margin-right: 4px;
 }
 
 .selectGray {
@@ -147,6 +160,9 @@ select {
 select {
     border-color: rgb(187, 187, 187);
     border-radius: 2px;
+    padding: 6px;
+    display:inline-block;
+    min-width: 160px;
 }
 
 .grayButton {
@@ -168,6 +184,9 @@ select {
     margin-top: 16px;
     margin-bottom: 16px;
 }
+#mainGraphs {
+    position: relative;
+}
 
 .splitButton i {
     background-color: white;
@@ -186,4 +205,42 @@ aside {
 
 aside img {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+#chatIcon {
+    background-color: #005981;
+    color: white;
+    float: right;
+    z-index: 1;
+    position: absolute;
+    bottom:30px;
+    right: 30px;
+    height: 70px;
+    width: 70px;
+    border-radius: 1000px;
+    padding:15px;
+}
+
+.FMBox {
+    width: 32%;
+    height: 99%;
+    margin: 0.5%;
+    font-size: 14px;
+    float: left;
+}
+
+.FMBoxWide {
+    width: 47%;
+    height: 99%;
+    margin: 0.5%;
+    font-size: 14px;
+    float: left;
+}
+
+.FMBoxSmall {
+    width: 25%;
+    height: 99%;
+    margin: 0.5%;
+    font-size: 14px;
+    float: left;
 }
