Main Graphs added, Info and Methods data from JSON file

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -19,8 +19,8 @@
     </div>
 </div>
 <div id="mainGraphs">
-    
-    <img src="assets/Graph_ArticleFC.png" width="85%">
+  <div id="container" style="width:85%; height:400px;"></div>
+  <!--<img src="assets/Graph_ArticleFC.png" width="85%">-->
 </div>
 </main>
 <footer>
