--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,137 +1,122 @@
 <div class="FMBoxWide">
 
-    <div
-        style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
-        Data Information
-        <hr>
-        <div style="display:inline-block">
-            <div style="float:left; margin-right: 24px;">
-                Aggregation Level <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    GrArticle
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Article ID
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    5781232
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                SBU <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    EMU
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Country <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    Mixed
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Alphacode <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    NBP
-                </div>
-            </div>
+  <div style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
+    Data Information
+    <hr>
+    <div style="display:inline-block">
+      <div style="float:left; margin-right: 24px;">
+        Aggregation Level <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ AggregationLevel }}
         </div>
-        <div style="display:inline-block">
-            <div style="float:left; margin-right: 24px;">
-                Segmentation <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    High-Touch
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Package Size <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    10
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Data-based Package Size <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    1000
-                </div>
-            </div>
-
-
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Article ID
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ ArticleID }}
         </div>
-        <div style="display:inline-block">
-            <div style="float:left; margin-right: 24px;">
-                Historical Data
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    60 months
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Non-zero
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    100%
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                TS Class <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    Smooth
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Seasonal <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    No
-                </div>
-            </div>
-            <div style="float: left; margin-right: 24px;">
-                Average Demand <i class="fas fa-info-circle"></i>
-                <div
-                    style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
-                    15 231
-                </div>
-            </div>
-
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        SBU <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ SBU }}
         </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Country <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ Country }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Alphacode <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ AlphaCode }}
+        </div>
+      </div>
     </div>
+    <div style="display:inline-block">
+      <div style="float:left; margin-right: 24px;">
+        Segmentation <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ Segmentation }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Package Size <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ PackageSize }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Data-based Package Size <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ DBPackageSize }}
+        </div>
+      </div>
+
+
+    </div>
+    <div style="display:inline-block">
+      <div style="float:left; margin-right: 24px;">
+        Historical Data
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ HistoricalData }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Non-zero
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ NonZero }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        TS Class <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ TSClass }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Seasonal <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ Seasonal }}
+        </div>
+      </div>
+      <div style="float: left; margin-right: 24px;">
+        Average Demand <i class="fas fa-info-circle"></i>
+        <div style="border: 1px solid #dbe9f0; padding: 4px; padding-right: 12px; margin-top: 4px; margin-bottom: 8px;">
+          {{ AvgDemand }}
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
 <div class="FMBoxSmall">
 
 
 
-    <div
-        style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
-        Short-Term Forecast
-        <hr>
-        Forecast Method <i class="fas fa-info-circle"></i>
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            MA6
-        </div>
-
-        Forecast Period
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            June 2021 - May 2022 (12 months)
-        </div>
-
-        Forecast Level <i class="fas fa-info-circle"></i>
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            GrArticle
-        </div>
-
-
-
+  <div style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
+    Short-Term Forecast
+    <hr>
+    Forecast Method <i class="fas fa-info-circle"></i>
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ STMethod }}
     </div>
+
+    Forecast Period
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ STPeriod }}
+    </div>
+
+    Forecast Level <i class="fas fa-info-circle"></i>
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ STLevel }}
+    </div>
+
+
+
+  </div>
 
 </div>
 
@@ -139,27 +124,26 @@
 
 
 
-    <div
-        style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
-        Long-Term Forecast
-        <hr>
-        Forecast Method <i class="fas fa-info-circle"></i>
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            MA6
-        </div>
-
-        Forecast Period
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            June 2022 - May 2023 (12 months)
-        </div>
-
-        Forecast Level <i class="fas fa-info-circle"></i>
-        <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
-            GrArticle
-        </div>
-
-
-
+  <div style="border-style: solid; border-width: 4px; border-color:#dbe9f0; border-radius: 2px; padding: 10px 20px; margin-top: 10px;">
+    Long-Term Forecast
+    <hr>
+    Forecast Method <i class="fas fa-info-circle"></i>
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ LTMethod }}
     </div>
+
+    Forecast Period
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ LTPeriod }}
+    </div>
+
+    Forecast Level <i class="fas fa-info-circle"></i>
+    <div style="border: 1px solid #dbe9f0; padding: 4px; margin-top: 4px; margin-bottom: 8px;">
+      {{ LTLevel }}
+    </div>
+
+
+
+  </div>
 
 </div>
