--- a/src/app/methods/methods.component.html
+++ b/src/app/methods/methods.component.html
@@ -2,61 +2,11 @@
     Tested Methods
     <div style="margin-top: 10px;">
 
-        <table>
+        <table id='methodTable'>
             <tr>
                 <th></th>
                 <th>Method</th>
                 <th>Score</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>MA6</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>MA6</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>MA6</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>MA6</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>MA6</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>MA6</td>
-                <td>6</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>MA6</td>
-                <td>7</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>MA6</td>
-                <td>8</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>MA6</td>
-                <td>9</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>MA6</td>
-                <td>10</td>
             </tr>
         </table>
 
@@ -70,27 +20,25 @@
         Backtest Settings
         <div style="padding: 4px">
             Forecast Method <br>
-            <select name="FCMethod" id="FCMethod" style="width: 100%">
-                <option value="2">MA6</option>
+            <select name="BTMethod" id="BTMethod" style="width: 100%">
             </select>
         </div>
         <div style="padding: 4px">
             Forecast Step <br>
-            <select name="FCStep" id="FCStep" style="width: 100%">
+            <select name="FCStep" id="BTFCStep" style="width: 100%">
                 <option value="2">2-months-ahead</option>
                 <option value="3">3-months-ahead</option>
-                <option value="4">4-months-ahead</option>
-                <option value="5">5-months-ahead</option>
             </select>
         </div>
 
         <div style="padding: 4px">
             Performance Criterion <br>
-            <select name="PC" id="PC" style="width: 100%">
-                <option value="PIS">PIS</option>
-                <option value="MSE">MSE</option>
-                <option value="ME">ME</option>
-                <option value="ABC">ABC</option>
+            <select name="BTPC" id="BTPC" style="width: 100%">
+              <option value="PIS">PIS</option>
+              <option value="MSE">MSE</option>
+              <option value="ME">ME</option>
+              <option value="ABC">ABC</option>
+              <option value="FCA">FCA</option>
             </select>
         </div>
         <div style="padding: 4px">
@@ -110,7 +58,10 @@
 
 
 <div class="FMBox">
-    <div style="margin-top: 10px;">
-        <img src="assets/FC_Errors.png" width="90%">
+  <div style="margin-top: 10px;" id='graphPC'>
+    <div id="FCGraph1" style="max-height: 160px">
     </div>
+    <div id="FCGraph2" style="max-height: 160px">
+    </div>
+  </div>
 </div>
