--- a/src/app/methods/methods.component.scss
+++ b/src/app/methods/methods.component.scss
@@ -241,4 +241,11 @@ body {
 	font-size: 14px;
 	float: left;
   }
-  
+
+chart {
+  spacingBottom: 15;
+  spacingTop: 10;
+  spacingLeft: 10;
+  spacingRight: 10;
+  height: 80px;
+}
