updateChart2 function buggy

--- a/src/app/methods/methods.component.html
+++ b/src/app/methods/methods.component.html
@@ -20,7 +20,7 @@
         Backtest Settings
         <div style="padding: 4px">
             Forecast Method <br>
-            <select name="BTMethod" id="BTMethod" style="width: 100%">
+            <select name="BTMethod" id="BTMethod" style="width: 100%" (change) ="updateChart2()">
             </select>
         </div>
         <div style="padding: 4px">
