--- a/src/app/methods/methods.component.scss
+++ b/src/app/methods/methods.component.scss
@@ -75,7 +75,7 @@ body {
   
   #menuBarLine {
 	margin-top: -14px;
-	margin-bottom: 0px;
+	margin-bottom: -10px;
   }
   
   #menuOptions {
@@ -161,7 +161,10 @@ body {
 	display:inline-block;
 	min-width: 160px;
   }
-  
+
+select:disabled {
+  background-color: rgb(230, 230, 230);
+}
   .grayButton {
 	display: inline-block;
 	margin: 0px;
