--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -3,28 +3,28 @@
         src="https://www.plattform-i40.de/IP/Redaktion/DE/Anwendungsbeispiele/042-augmented-reality/logo-basf.png?__blob=normal&v=1&size=420w">
 
 </header>
-<div class="menuBar">
+<div class="menuBar" id="menuBar">
     <ul>
-        <li style="float:left"><a (click)="changeNav('Infoprovider')"><i class="fas fa-th-list"></i>Infoprovider</a></li>
-        <li style="float:left"><a class="selected" (click)="changeNav('Summary')"><i class="fas fa-table"></i>Summary</a></li>
-        <li style="float:left"><a (click)="changeNav('Forecast')"><i class="fas fa-chart-line"></i>Forecast</a></li>
-        <li style="float:left"><a (click)="changeNav('Statistics')"><i class="fas fa-chart-bar"></i>Statistics</a></li>
-        <li style="float:left"><a (click)="changeNav('Article Forecast')"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
+        <li style="float:left"><a (click)="changeNav('Infoprovider')" id="navInfoprovider" disabled><i class="fas fa-th-list"></i>Infoprovider</a></li>
+        <li style="float:left"><a class="selected" (click)="changeNav('Summary')" id="navSummary"><i class="fas fa-table"></i>Summary</a></li>
+        <li style="float:left"><a (click)="changeNav('Forecast')" id="navForecast" disabled><i class="fas fa-chart-line"></i>Forecast</a></li>
+        <li style="float:left"><a (click)="changeNav('Statistics')" id="navStatistics" disabled><i class="fas fa-chart-bar"></i>Statistics</a></li>
+        <li style="float:left"><a (click)="changeNav('Article Forecast')"id="navArticleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
         <!--<li style="float:right; ">
                   <a href="#settings" style="margin-top:-8px">
                       <span style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span>
                   </a>
               </li>-->
         <li style="float:right; ">
-            <a href="#settings" style="margin-top:-8px">
-                <span style="font-size: 24px; color: #99D3ED "><i class="fas fa-info-circle"></i></span>
+            <a (click)="openManual()" style="margin-top:-8px">
+                <span style="font-size: 24px; color: #99D3ED "><i class="fas fa-book"></i></span>
             </a>
         </li>
     </ul>
     <hr id="menuBarLine">
 </div>
-<main style="width: 75%; display: inline-block;">
-    <app-article id="Article" style="display: none;" #Article></app-article>
+<main id="main" style="width: 98%; display: inline-block;">
+    <app-article [articleNumber] = "art" id="Article" style="display: none;" #Article ></app-article>
     <app-summary id="Summary" style="display: block;" #Summary></app-summary>
 </main>
 <div id="chatIcon" (click)="showChat()" style="display: block;">
