--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -55,10 +55,6 @@ main {
   height: 60px;
 }
 
-/*li {
-  float: left;
-}*/
-
 li a {
   display: block;
   color: #99D3ED;
@@ -72,8 +68,12 @@ li a:hover {
   color:#005981;
 }
 
-.selected {
+li .selected {
   color:#005981;
+}
+
+a:not([href]):not([class]) {
+  color: #99D3ED;
 }
 
 #menuBarLine {
@@ -85,6 +85,7 @@ li a:hover {
   float: right;
 
 }
+
 
 #month {
   display: inline-block;
@@ -163,6 +164,10 @@ select {
   padding: 6px;
   display:inline-block;
   min-width: 160px;
+}
+
+select:disabled {
+  background-color: rgb(230, 230, 230);
 }
 
 .grayButton {
