--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -240,4 +240,18 @@ body {
 	font-size: 14px;
 	float: left;
   }
-  
+
+.highlight {
+  border: 4px solid rgb(255,154,154);
+}
+
+.highlightBox {
+  box-shadow: 0 0 0 4px rgb(255,154,154);
+}
+
+.highlightPos {
+  z-line: -1;
+  position: fixed;
+  box-shadow: 0 0 0 4px rgb(255,154,154);
+}
+
