--- a/src/app/values/values.component.html
+++ b/src/app/values/values.component.html
@@ -1,4 +1,4 @@
-<table>
+<table id="fcTable">
     <tr>
         <th>Year</th>
         <th>Jan</th>
@@ -15,140 +15,5 @@
         <th>Dec</th>
         <th>Full Year</th>
     </tr>
-    <tr>
-        <td>2016</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>30 000</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td></td>
-
-    </tr>
-    <tr>
-        <td>2017</td>
-        <td>30 000</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>25 300</td>
-        <td>30 000</td>
-        <td>248 700</td>
-
-    </tr>
-    <tr>
-        <td>2018</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>253 000</td>
-
-    </tr>
-    <tr>
-        <td>2019</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>275 800</td>
-
-    </tr>
-    <tr>
-        <td>2020</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>227 500</td>
-
-    </tr>
-    <tr>
-        <td>2021</td>
-        <td>26 000</td>
-        <td>30 600</td>
-        <td>28 000</td>
-        <td>19 100</td>
-        <td>25 300</td>
-        <td>19 100</td>
-        <td class="blue">28 000</td>
-        <td class="blue">35 200</td>
-        <td class="blue">23 800</td>
-        <td class="blue">13 500</td>
-        <td class="blue">22 400</td>
-        <td class="blue">92 700</td>
-        <td class="blue">233 500</td>
-
-    </tr>
-    <tr>
-        <td>2022</td>
-        <td class="blue">28 000</td>
-        <td class="blue">35 200</td>
-        <td class="blue">23 800</td>
-        <td class="blue">13 500</td>
-        <td class="blue">22 400</td>
-        <td class="blue">92 700</td>
-        <td class="blue">23 500</td>
-        <td class="blue">35 200</td>
-        <td class="blue">23 800</td>
-        <td class="blue">13 500</td>
-        <td class="blue">22 400</td>
-        <td class="blue">92 700</td>
-        <td class="blue">272 800</td>
-
-    </tr>
-    <tr>
-        <td>2023</td>
-        <td class="blue">28 000</td>
-        <td class="blue">35 200</td>
-        <td class="blue">23 800</td>
-        <td class="blue">13 500</td>
-        <td class="blue">22 400</td>
-        <td class="blue">92 700</td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-        <td class="blue"></td>
-
-    </tr>
+   
 </table>
