Added highlighting by Chatbot

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -34,6 +34,7 @@
     <div id="closeIcon" (click)="hideChat()" style="display: block;">
         <span style="font-size:12px">X</span>
     </div>
-    <div id="botWin" style="height:100%" #botWindow></div>
+    <div  style="display: block; text-align: right;">Planny</div>
+    <div id="botWin" style="height: calc(100% - 20px)" #botWindow></div>
 
 </aside>
